force-app/main/default/objects/Assessment_outside__c/fields/dmg_head_light_left_reason__c.field-meta.xml
<CustomField>
    <fullName>dmg_head_light_left_reason__c</fullName>
    <formula>CASE ( TEXT ( Assessment__r.dmg_head_light_left_reason__c ) , &quot;2&quot;, &quot;〇&quot; , &quot;4&quot;, &quot;×&quot; , &quot;10&quot;, &quot;ステー折れ&quot; , &quot;8&quot; , &quot;傷&quot; , &quot;1&quot; , &quot;---&quot; , &quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ヘッドライト左</label>
    <type>Text</type>
</CustomField>