force-app/main/default/objects/Assessment_outside__c/fields/dmg_oil_pam__c.field-meta.xml
<CustomField>
    <fullName>dmg_oil_pam__c</fullName>
    <formula>CASE ( TEXT ( Assessment__r.dmg_oil_pam__c ) , &quot;1&quot;, &quot;〇&quot; , &quot;2&quot;, &quot;×&quot; , &quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>オイルパン</label>
    <type>Text</type>
</CustomField>