force-app/main/default/objects/Assessment_outside__c/fields/dmg_rear_glass_reason__c.field-meta.xml
<CustomField>
    <fullName>dmg_rear_glass_reason__c</fullName>
    <formula>CASE ( TEXT ( Assessment__r.dmg_rear_glass_reason__c ) , &quot;2&quot;, &quot;〇&quot; , &quot;4&quot;, &quot;×&quot; , &quot;6&quot;, &quot;飛び石&quot; , &quot;1&quot; , &quot;---&quot; , &quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>リアガラス</label>
    <type>Text</type>
</CustomField>