force-app/main/default/objects/Assessment_outside__c/fields/dmg_side_step_left__c.field-meta.xml
<CustomField>
    <fullName>dmg_side_step_left__c</fullName>
    <formula>CASE ( TEXT ( Assessment__r.dmg_side_step_left__c ) , &quot;2&quot;, &quot;〇&quot; , &quot;4&quot;, &quot;×&quot; , &quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>サイドステップ左</label>
    <type>Text</type>
</CustomField>