force-app/main/default/objects/Assessment_outside__c/fields/dmg_tail_lense_right__c.field-meta.xml
<CustomField>
    <fullName>dmg_tail_lense_right__c</fullName>
    <formula>CASE ( TEXT ( Assessment__r.dmg_tail_lense_right__c) , &quot;2&quot;, &quot;〇&quot; , &quot;4&quot;, &quot;×&quot;, &quot;8&quot; , &quot;傷&quot; , &quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>テールレンズ右</label>
    <type>Text</type>
</CustomField>