force-app/main/default/objects/Assessment_outside__c/fields/DocumentOK_date__c.field-meta.xml
<CustomField>
    <fullName>DocumentOK_date__c</fullName>
    <formula>Assesment_outside_Opportunity__r.DocumentOKCheck__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>書類OK日</label>
    <type>Date</type>
</CustomField>