force-app/main/default/objects/Assessment_outside__c/fields/engine__c.field-meta.xml
<CustomField>
    <fullName>engine__c</fullName>
    <formula>CASE(TEXT( Assessment__r.engine__c) ,&quot;1&quot;,&quot;スタート&quot;,&quot;2&quot;,&quot;かからない&quot;,&quot;3&quot;,&quot;確認できず&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>エンジン</label>
    <type>Text</type>
</CustomField>