force-app/main/default/objects/Assessment_outside__c/fields/engine_back__c.field-meta.xml
<CustomField>
    <fullName>engine_back__c</fullName>
    <formula>CASE ( TEXT ( Assessment__r.engine_back__c ) , &quot;1&quot;, &quot;なし&quot; , &quot;2&quot;, &quot;後退&quot; , &quot;3&quot;, &quot;？&quot; ,  &quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>エンジン後退</label>
    <type>Text</type>
</CustomField>