force-app/main/default/objects/Assessment_outside__c/fields/engine_image__c.field-meta.xml
<CustomField>
    <fullName>engine_image__c</fullName>
    <formula>HYPERLINK($Label.PictureArrangeURL1 &amp; asset_mngno__c &amp; $Label.PictureArrangeURL2 &amp;  Assessment__r.engine_url__c  , IMAGE( Assessment__r.engine_url__c , &quot;エンジンルーム&quot; ) ,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>エンジンルーム画像</label>
    <type>Text</type>
</CustomField>