force-app/main/default/objects/Assessment_outside__c/fields/engine_katasiki__c.field-meta.xml
<CustomField>
    <fullName>engine_katasiki__c</fullName>
    <formula>Assessment__r.engine_katasiki__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>エンジン型式</label>
    <type>Text</type>
</CustomField>