force-app/main/default/objects/Assessment_outside__c/fields/front_image__c.field-meta.xml
<CustomField>
    <fullName>front_image__c</fullName>
    <formula>HYPERLINK($Label.PictureArrangeURL1 &amp; asset_mngno__c &amp; $Label.PictureArrangeURL2 &amp; Assessment__r.front_url__c , IMAGE( Assessment__r.front_url__c , &quot;正面&quot; ), &quot;_self&quot; )</formula>
    <label>正面画像</label>
    <type>Text</type>
</CustomField>