force-app/main/default/objects/Assessment_outside__c/fields/front_left_image__c.field-meta.xml
<CustomField>
    <fullName>front_left_image__c</fullName>
    <formula>HYPERLINK($Label.PictureArrangeURL1 &amp; asset_mngno__c &amp; $Label.PictureArrangeURL2 &amp; Assessment__r.left_front_url__c  , IMAGE(Assessment__r.left_front_url__c , &quot;左前&quot; ) ,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>左前画像</label>
    <type>Text</type>
</CustomField>