force-app/main/default/objects/Assessment_outside__c/fields/front_right_image__c.field-meta.xml
<CustomField>
    <fullName>front_right_image__c</fullName>
    <formula>HYPERLINK($Label.PictureArrangeURL1 &amp; asset_mngno__c &amp; $Label.PictureArrangeURL2 &amp; Assessment__r.right_front_url__c , IMAGE(Assessment__r.right_front_url__c, &quot;右前&quot; ) ,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>右前画像</label>
    <type>Text</type>
</CustomField>