force-app/main/default/objects/Assessment_outside__c/fields/fuel__c.field-meta.xml
<CustomField>
    <fullName>fuel__c</fullName>
    <formula>CASE ( TEXT ( Assessment__r.fuel__c ) , &quot;0&quot;, &quot;空白&quot; , &quot;1&quot;, &quot;ガソリン&quot; , &quot;2&quot;, &quot;ディーゼル&quot; , &quot;2&quot;, &quot;LPG&quot; , &quot;2&quot;, &quot;電気&quot; , &quot;2&quot;, &quot;CNG&quot; , &quot;2&quot;, &quot;電気・ガソリン&quot; , &quot;2&quot;, &quot;水素&quot; , &quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>燃料</label>
    <type>Text</type>
</CustomField>