force-app/main/default/objects/Assessment_outside__c/fields/fuel_ohter__c.field-meta.xml
<CustomField>
    <fullName>fuel_ohter__c</fullName>
    <formula>Assessment__r.fuel_ohter__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>燃料その他</label>
    <type>Text</type>
</CustomField>