force-app/main/default/objects/Assessment_outside__c/fields/full_katasiki__c.field-meta.xml
<CustomField>
    <fullName>full_katasiki__c</fullName>
    <formula>Assessment__r.full_katasiki__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>フル型式</label>
    <type>Text</type>
</CustomField>