force-app/main/default/objects/Assessment_outside__c/fields/gaihin_meter__c.field-meta.xml
<CustomField>
    <fullName>gaihin_meter__c</fullName>
    <formula>CASE ( TEXT ( Assessment__r.gaihin_meter__c ) , &quot;0&quot;, &quot;無&quot; , &quot;1&quot;, &quot;有&quot; , &quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>外品メーター</label>
    <type>Text</type>
</CustomField>