force-app/main/default/objects/Assessment_outside__c/fields/haiki_ryo__c.field-meta.xml
<CustomField>
    <fullName>haiki_ryo__c</fullName>
    <formula>Assessment__r.haiki_ryo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>排気量（CC）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>