force-app/main/default/objects/Assessment_outside__c/fields/handle__c.field-meta.xml
<CustomField>
    <fullName>handle__c</fullName>
    <formula>CASE ( TEXT ( Assessment__r.handle__c ) , &quot;1&quot;, &quot;左&quot; , &quot;2&quot;, &quot;右&quot; , &quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ハンドル</label>
    <type>Text</type>
</CustomField>