force-app/main/default/objects/Assessment_outside__c/fields/inner_dust__c.field-meta.xml
<CustomField>
    <fullName>inner_dust__c</fullName>
    <formula>CASE ( TEXT ( Assessment__r.inner_dust__c ) , &quot;0&quot;, &quot;無&quot; , &quot;1&quot;, &quot;有&quot; , &quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>室内ゴミ</label>
    <type>Text</type>
</CustomField>