force-app/main/default/objects/Assessment_outside__c/fields/jiso__c.field-meta.xml
<CustomField>
    <fullName>jiso__c</fullName>
    <formula>CASE ( TEXT ( Assessment__r.jiso__c ) , &quot;2&quot;, &quot;可&quot; , &quot;6&quot;, &quot;少し可（積載車積込可）&quot; , &quot;7&quot;, &quot;少し可（積載車積込不可）&quot; , &quot;8&quot; , &quot;自走少し可（積載車積込OK船積不動扱い）&quot; , &quot;4&quot; , &quot;不可（転がる）&quot; , &quot;5&quot; , &quot;不可（転がらない）&quot; , &quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>自走</label>
    <type>Text</type>
</CustomField>