force-app/main/default/objects/Assessment_outside__c/fields/katasiki_sitei_no__c.field-meta.xml
<CustomField>
    <fullName>katasiki_sitei_no__c</fullName>
    <formula>Assessment__r.katasiki_sitei_no__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>型式指定番号</label>
    <type>Text</type>
</CustomField>