force-app/main/default/objects/Assessment_outside__c/fields/key__c.field-meta.xml
<CustomField>
    <fullName>key__c</fullName>
    <formula>CASE ( TEXT ( Assessment__r.key__c ) , &quot;0&quot;, &quot;無&quot; , &quot;1&quot;, &quot;有&quot; , &quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>アナタコカギ</label>
    <type>Text</type>
</CustomField>