force-app/main/default/objects/Assessment_outside__c/fields/key_image__c.field-meta.xml
<CustomField>
    <fullName>key_image__c</fullName>
    <formula>HYPERLINK($Label.PictureArrangeURL1 &amp; asset_mngno__c &amp; $Label.PictureArrangeURL2 &amp; Assessment__r.key_url__c  , IMAGE(Assessment__r.key_url__c, &quot;カギ&quot; ) ,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>カギ画像</label>
    <type>Text</type>
</CustomField>