force-app/main/default/objects/Assessment_outside__c/fields/kudo__c.field-meta.xml
<CustomField>
    <fullName>kudo__c</fullName>
    <formula>CASE ( TEXT ( Assessment__r.kudo__c ) , &quot;0&quot;, &quot;未選択&quot; , &quot;1&quot;, &quot;2WD&quot; , &quot;2&quot;, &quot;4WD&quot; , &quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>駆動</label>
    <type>Text</type>
</CustomField>