force-app/main/default/objects/Assessment_outside__c/fields/meter_disp__c.field-meta.xml
<CustomField>
    <fullName>meter_disp__c</fullName>
    <formula>CASE ( TEXT ( Assessment__r.meter_disp__c ) , &quot;1&quot;, &quot;表示せず&quot; , &quot;2&quot;, &quot;メーター改ざん&quot; , &quot;3&quot;, &quot;メーター交換&quot; , &quot;4&quot;, &quot;走行不明&quot; , &quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>メーター表示</label>
    <type>Text</type>
</CustomField>