force-app/main/default/objects/Assessment_outside__c/fields/meter_image__c.field-meta.xml
<CustomField>
    <fullName>meter_image__c</fullName>
    <formula>HYPERLINK($Label.PictureArrangeURL1 &amp; asset_mngno__c &amp; $Label.PictureArrangeURL2 &amp;  Assessment__r.meter_url__c  , IMAGE(Assessment__r.meter_url__c, &quot;メーター&quot; ) ,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>メーター画像</label>
    <type>Text</type>
</CustomField>