force-app/main/default/objects/Assessment_outside__c/fields/mission__c.field-meta.xml
<CustomField>
    <fullName>mission__c</fullName>
    <formula>CASE ( TEXT ( Assessment__r.mission__c ) , &quot;1&quot;, &quot;〇&quot; , &quot;2&quot;, &quot;シフトノブ動かない&quot; , &quot;3&quot;, &quot;ズレ&quot; , &quot;4&quot; , &quot;割れ&quot; , &quot;5&quot; , &quot;？&quot; , &quot;6&quot; , &quot;動作確認できず未確認&quot; , &quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ミッション</label>
    <type>Text</type>
</CustomField>