force-app/main/default/objects/Assessment_outside__c/fields/No1bit__c.field-meta.xml
<CustomField>
    <fullName>No1bit__c</fullName>
    <formula>Assessment__r.oppotunity__r.No1bit__c</formula>
    <label>1位金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>