force-app/main/default/objects/Assessment_outside__c/fields/No3bit__c.field-meta.xml
<CustomField>
    <fullName>No3bit__c</fullName>
    <formula>Assessment__r.oppotunity__r.No3bit__c</formula>
    <label>3位金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>