force-app/main/default/objects/Assessment_outside__c/fields/no_lift_use__c.field-meta.xml
<CustomField>
    <fullName>no_lift_use__c</fullName>
    <formula>CASE ( TEXT ( Assessment__r.no_lift_use__c ) , &quot;1&quot;, &quot;あり&quot; , &quot;2&quot;, &quot;なし&quot; , &quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>リフト使用</label>
    <type>Text</type>
</CustomField>