force-app/main/default/objects/Assessment_outside__c/fields/no_run_dist__c.field-meta.xml
<CustomField>
    <fullName>no_run_dist__c</fullName>
    <formula>CASE ( TEXT ( Assessment__r.no_run_dist__c ) , &quot;0&quot;, &quot;無&quot; , &quot;1&quot;, &quot;有&quot; , &quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>距離記載なし：有＝「車検証に距離記載なし」</inlineHelpText>
    <label>距離記載なし</label>
    <type>Text</type>
</CustomField>