force-app/main/default/objects/Assessment_outside__c/fields/NotSubjectToPayment__c.field-meta.xml
<CustomField>
    <fullName>NotSubjectToPayment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>精算対象外</label>
    <type>Checkbox</type>
</CustomField>