force-app/main/default/objects/Assessment_outside__c/fields/okiba__c.field-meta.xml
<CustomField>
    <fullName>okiba__c</fullName>
    <formula>Assessment__r.okiba__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>置場（自由入力）</label>
    <type>Text</type>
</CustomField>