force-app/main/default/objects/Assessment_outside__c/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>買取商談の所有者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunity_Owner_Assesment_outside</relationshipName>
    <type>Lookup</type>
</CustomField>