force-app/main/default/objects/Assessment_outside__c/fields/other_image_03__c.field-meta.xml
<CustomField>
    <fullName>other_image_03__c</fullName>
    <formula>HYPERLINK($Label.PictureArrangeURL1 &amp; asset_mngno__c &amp; $Label.PictureArrangeURL2 &amp;  Assessment__r.other_url_03__c  , IMAGE(Assessment__r.other_url_03__c, &quot;その他3&quot; ) ,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>その他画像3</label>
    <type>Text</type>
</CustomField>