force-app/main/default/objects/Assessment_outside__c/fields/Owner_copy__c.field-meta.xml
<CustomField>
    <fullName>Owner_copy__c</fullName>
    <formula>Owner:User.LastName &amp; Owner:User.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>所有者</label>
    <type>Text</type>
</CustomField>