force-app/main/default/objects/Assessment_outside__c/fields/Pickup_request_date__c.field-meta.xml
<CustomField>
    <fullName>Pickup_request_date__c</fullName>
    <formula>Assesment_outside_Opportunity__r.PurchaseDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>引取依頼日</label>
    <type>Date</type>
</CustomField>