force-app/main/default/objects/Assessment_outside__c/fields/PickupRequestDate__c.field-meta.xml
<CustomField>
    <fullName>PickupRequestDate__c</fullName>
    <label>引取依頼日</label>
    <type>Date</type>
</CustomField>