force-app/main/default/objects/Assessment_outside__c/fields/ProposedPrice__c.field-meta.xml
<CustomField>
    <fullName>ProposedPrice__c</fullName>
    <formula>Assesment_outside_Opportunity__r.ProposedPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>提示金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>