force-app/main/default/objects/Assessment_outside__c/fields/Purchase_condition__c.field-meta.xml
<CustomField>
    <fullName>Purchase_condition__c</fullName>
    <label>買取条件</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>一時抹消</fullName>
            </value>
            <value>
                <fullName>名義変更</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>