force-app/main/default/objects/Assessment_outside__c/fields/radiator__c.field-meta.xml
<CustomField>
    <fullName>radiator__c</fullName>
    <formula>CASE ( TEXT ( Assessment__r.radiator__c ) , &quot;1&quot;, &quot;〇&quot; , &quot;2&quot;, &quot;×&quot; , &quot;3&quot;, &quot;水漏れ	&quot; , &quot;4&quot; , &quot;押しているが水あり&quot; , &quot;5&quot; , &quot;不明&quot; , &quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ラジエター</label>
    <type>Text</type>
</CustomField>