force-app/main/default/objects/Assessment_outside__c/fields/registerdAtMonth__c.field-meta.xml
<CustomField>
    <fullName>registerdAtMonth__c</fullName>
    <formula>IF( ISBLANK( Assessment__r.registerdAtMonth__c ) , &quot;&quot; , Assessment__r.registerdAtMonth__c &amp; &quot;月&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>初年度月</label>
    <type>Text</type>
</CustomField>