force-app/main/default/objects/Assessment_outside__c/fields/registerdAtYear__c.field-meta.xml
<CustomField>
    <fullName>registerdAtYear__c</fullName>
    <formula>IF( ISBLANK( Assessment__r.registerdAtYear__c ) , &quot;&quot; , Assessment__r.registerdAtYear__c &amp; &quot;年&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>初年度年</label>
    <type>Text</type>
</CustomField>