force-app/main/default/objects/Assessment_outside__c/fields/rent_register__c.field-meta.xml
<CustomField>
    <fullName>rent_register__c</fullName>
    <formula>CASE ( TEXT ( Assessment__r.rent_register__c ) , &quot;0&quot;, &quot;無&quot; , &quot;1&quot;, &quot;有&quot; , &quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>レンタ登録</label>
    <type>Text</type>
</CustomField>