force-app/main/default/objects/Assessment_outside__c/fields/reserve1__c.field-meta.xml
<CustomField>
    <fullName>reserve1__c</fullName>
    <formula>CASE ( TEXT ( Assessment__r.reserve1__c ) , &quot;0&quot;, &quot;未選択&quot; , &quot;1&quot;, &quot;無&quot; , &quot;2&quot;, &quot;有&quot; , &quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>保証書</label>
    <type>Text</type>
</CustomField>