force-app/main/default/objects/Assessment_outside__c/fields/Role_Owner_SalesOpportunity__c.field-meta.xml
<CustomField>
    <fullName>Role_Owner_SalesOpportunity__c</fullName>
    <formula>Opportunity_Owner__r.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>買取商談の所有者ロール</label>
    <type>Text</type>
</CustomField>