force-app/main/default/objects/Assessment_outside__c/fields/room_image__c.field-meta.xml
<CustomField>
    <fullName>room_image__c</fullName>
    <formula>HYPERLINK($Label.PictureArrangeURL1 &amp; asset_mngno__c &amp; $Label.PictureArrangeURL2 &amp; Assessment__r.room_url__c  , IMAGE(Assessment__r.room_url__c , &quot;室内&quot; ) ,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>室内画像</label>
    <type>Text</type>
</CustomField>