force-app/main/default/objects/Assessment_outside__c/fields/rui_kbn_no__c.field-meta.xml
<CustomField>
    <fullName>rui_kbn_no__c</fullName>
    <formula>Assessment__r.rui_kbn_no__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>類別区分番号</label>
    <type>Text</type>
</CustomField>