force-app/main/default/objects/Assessment_outside__c/fields/run_dist__c.field-meta.xml
<CustomField>
    <fullName>run_dist__c</fullName>
    <formula>Assessment__r.run_dist__c</formula>
    <label>走行距離</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>