force-app/main/default/objects/Assessment_outside__c/fields/run_dist_unit__c.field-meta.xml
<CustomField>
    <fullName>run_dist_unit__c</fullName>
    <formula>CASE ( TEXT ( Assessment__r.run_dist_unit__c ) , &quot;1&quot;, &quot;km&quot; , &quot;2&quot;, &quot;マイル&quot; , &quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>走行距離単位</label>
    <type>Text</type>
</CustomField>