force-app/main/default/objects/Assessment_outside__c/fields/run_kakunin__c.field-meta.xml
<CustomField>
    <fullName>run_kakunin__c</fullName>
    <formula>CASE ( TEXT ( Assessment__r.run_kakunin__c ) , &quot;1&quot;, &quot;OK&quot; , &quot;2&quot;, &quot;NG&quot; , &quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>実走確認</label>
    <type>Text</type>
</CustomField>