force-app/main/default/objects/Assessment_outside__c/fields/seizo_getu__c.field-meta.xml
<CustomField>
    <fullName>seizo_getu__c</fullName>
    <formula>IF( ISBLANK( Assessment__r.seizo_getu__c ) , &quot;&quot; , Assessment__r.seizo_getu__c &amp; &quot;月&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>アナタコ製造年式（月）</label>
    <type>Text</type>
</CustomField>