force-app/main/default/objects/Assessment_outside__c/fields/seizo_nen__c.field-meta.xml
<CustomField>
    <fullName>seizo_nen__c</fullName>
    <formula>IF( ISBLANK( Assessment__r.seizo_nen__c ) , &quot;&quot; , Assessment__r.seizo_nen__c &amp; &quot;年&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>アナタコ製造年式（年）</label>
    <type>Text</type>
</CustomField>